tests/paczka1/fuzzy1/52842216.err
Error in line 2: mSPIp S67 13,0
Error in line 5: mSPIp S567 38,8
Error in line 3: 3vMj1 S418 45,1
Error in line 10: 3vMj1 S429 97,9
Error in line 9: MMZQHuCOp S67 8,9
Error in line 15: mSPIp S429 55,8
Error in line 1: S67 S418 82,2
Error in line 20: o45sJ S67 38,0
Error in line 25: 3vMj1 S67 68,9
Error in line 26: 3vMj1 S429 81,4
Error in line 22: S67 S67 64,7
Error in line 34: o45sJ S567 3,2
